<resources>
    <string name="app_name">Quest-for-glory</string>
    <string name="quest_for_glory">Quest for glory</string>
    <string name="your_journey_begins_here">Your journey begins here!</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="notifications">Notifications</string>
    <string name="start">Start</string>
    <string name="level">Level 1</string>
    <string name="XP">XP 0 / 200</string>
    <string name="greed">Greed</string>
    <string name="inventory">Inventory</string>
    <string name="skills">Skills</string>
    <string name="quest_1">Quest: kill 1 spriggan in The Forest</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="the_forest">The Forest\nLevel 1</string>
    <string name="the_forest_rewards">Rewards 2 Herbs</string>
    <string name="the_mountain">The Mountain\nLevel 1</string>
    <string name="the_mountain_rewards">Rewards 2 Ores</string>
    <string name="the_ruin">The Ruin\nLevel 1</string>
    <string name="the_ruin_rewards">Rewards 2 SoulDust</string>
    <string name="player">Player</string>
    <string name="spriggan">Spriggan</string>
    <string name="options">Options</string>
    <string name="gear">Gear</string>
    <string name="kingdom">Kingdom</string>
    <string name="quests">Quests</string>
    <string name="herbs">Herbs: 0</string>
    <string name="ores">Ores: 0</string>
    <string name="soulDust">SoulDust: 0</string>
    <string name="gold">Gold: 0</string>
    <string name="alchemy">Alchemy</string>
    <string name="blacksmithing">Blacksmithing</string>
    <string name="enchanting">Enchanting</string>
    <string name="upgrade">Upgrade for\n50 Gold</string>
    <string name="craft">Craft for\n 3 Herbs</string>
    <string name="buy">Buy for\n12 Gold</string>
    <string name="sell">Sell for\n9 Gold</string>
    <string name="health_potion_info">Health Potion Level 1\n+ 60 Health (0)</string>
    <string name="damage_potion_info">Damage Potion Level 1\n+ 15 Damage for 3 turns (0)</string>
    <string name="health_potion">HP (0)</string>
    <string name="damage_potion">DP (0)</string>
    <string name="player_health">Health: 100</string>
    <string name="enemy_health">Health: 80</string>
    <string name="hint_name">Name</string>
    <string name="create">Create!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string-array name="planets_array">
        <item>Not Selected</item>
        <item>Warrior</item>
        <item>Mage</item>
        <item>Archer</item>
    </string-array>
    <string name="strike">Strike</string>
    <string name="charge">Charge</string>
    <string name="defense_up">Defense Up</string>
    <string name="strike_info">Strike\nDamaging enemies\nfor 100% attack power\n</string>
    <string name="charge_info">Charge\nDamaging enemies\nfor 50% attack power\nStun for 1 turn</string>
    <string name="defense_up_info">Defense Up\nGain + 30% defense\nfor 3 turns\n</string>
    <string name="offensiveGear">Offensive Gear</string>
    <string name="defensiveGear">Defensive Gear</string>
    <string name="gamblingGear">Gambling Gear</string>
    <string name="two_handed_weapons">Two-handed Weapons</string>
    <string name="helms">Helms</string>
    <string name="pauldrons">Pauldrons</string>
    <string name="chestplates">Chestplates</string>
    <string name="gloves">Gloves</string>
    <string name="bracers">Bracers</string>
    <string name="belts">Belts</string>
    <string name="leggings">Leggings</string>
    <string name="boots">Boots</string>
</resources>