<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/level"
            android:text="@string/level"
            android:gravity="center"
            android:textSize="23sp"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:background="@drawable/border_level_xp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/XP"
            android:text="@string/XP"
            android:gravity="center"
            android:textSize="23sp"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/border_level_xp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/greedText"
            android:gravity="center"
            android:text="@string/greed"
            android:textSize="23sp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/border_menus"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:clickable="false"
            android:onClick="greed"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/inventoryText"
            android:gravity="center"
            android:text="@string/inventory"
            android:textSize="23sp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/border_menus"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:clickable="false"
            android:onClick="inventory"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/skillsText"
            android:gravity="center"
            android:text="@string/skills"
            android:textSize="23sp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/border_menus_highlight"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:clickable="false"
            android:layout_weight="1" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="372dp"
        android:background="@drawable/border_the_forest">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/strike"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@string/strike"/>

                <TextView
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:text="@string/strike_info"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="20dp"
                    android:textSize="19sp"
                    android:id="@+id/textView3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/charge"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@string/charge"/>

                <TextView
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:text="@string/charge_info"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="20dp"
                    android:textSize="19sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/defense_up"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@string/charge"
                    android:id="@+id/imageView" />

                <TextView
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:text="@string/defense_up_info"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="20dp"
                    android:textSize="19sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gearText"
            android:gravity="center"
            android:text="@string/gear"
            android:textSize="23sp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/border_menus"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:clickable="false"
            android:onClick="gear"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/kingdomText"
            android:gravity="center"
            android:text="@string/kingdom"
            android:textSize="23sp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/border_menus"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:clickable="false"
            android:onClick="kingdom"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/questsText"
            android:gravity="center"
            android:text="@string/quests"
            android:textSize="23sp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/border_menus"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:clickable="false"
            android:onClick="quests"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>