<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/level"
            android:text="@string/level"
            android:gravity="center"
            android:textSize="23sp"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:background="@drawable/border_level_xp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/XP"
            android:text="@string/XP"
            android:gravity="center"
            android:textSize="23sp"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/border_level_xp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/greedText"
            android:gravity="center"
            android:text="@string/greed"
            android:textSize="23sp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/border_menus"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:clickable="false"
            android:onClick="greed"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/inventoryText"
            android:gravity="center"
            android:text="@string/inventory"
            android:textSize="23sp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/border_menus"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:clickable="false"
            android:onClick="inventory"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/skillsText"
            android:gravity="center"
            android:text="@string/skills"
            android:textSize="23sp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/border_menus"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:clickable="false"
            android:onClick="skills"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/herbs"
            android:text="@string/herbs"
            android:textSize="23sp"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:background="@drawable/border_the_forest"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:clickable="false"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ores"
            android:text="@string/ores"
            android:textSize="23sp"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:background="@drawable/border_the_mountain"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:clickable="false"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/soulDust"
            android:text="@string/soulDust"
            android:textSize="23sp"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:background="@drawable/border_the_ruin"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:clickable="false"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gold"
            android:text="@string/gold"
            android:textSize="23sp"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:background="@drawable/border_gold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:clickable="false"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/alchemy"
            android:gravity="center"
            android:text="@string/alchemy"
            android:textSize="40sp"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@drawable/border_the_forest"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:clickable="false"
            android:layout_weight="1"
            android:onClick="alchemy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/blacksmithing"
            android:gravity="center"
            android:text="@string/blacksmithing"
            android:textSize="40sp"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@drawable/border_the_mountain"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:onClick="blacksmithing" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/enchanting"
            android:gravity="center"
            android:text="@string/enchanting"
            android:textSize="40sp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/border_the_ruin"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:clickable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gearText"
            android:gravity="center"
            android:text="@string/gear"
            android:textSize="23sp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/border_menus"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:clickable="false"
            android:onClick="gear"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/kingdomText"
            android:gravity="center"
            android:text="@string/kingdom"
            android:textSize="23sp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/border_menus_highlight"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:clickable="false"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/questsText"
            android:gravity="center"
            android:text="@string/quests"
            android:textSize="23sp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/border_menus"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textAllCaps="false"
            android:clickable="false"
            android:onClick="quests"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>